--- a/app/assets/stylesheets/chat.css.scss
+++ b/app/assets/stylesheets/chat.css.scss
@@ -1,14 +1,6 @@
-.navbar-fixed-bottom {
-  top: 51px;
-}
-
-.dropdown.user-dropdown.open {
-  z-index: 2;
-}
-
 .row-fluid {
-  height: 100%;
-  overflow-y: hidden;
+//  height: 100%;
+//  overflow-y: hidden;
 }
 
 .col-md-2 {
@@ -32,8 +24,9 @@
 }
 .pag{
   height: 20px;
-  width: 98.9%;
-  position:absolute;
+  margin-top:-15px;
+  width: 100%;
+  position:relative;
   background-color: rgba(10,10,10,0.07);
   border-radius: 0px 0px 30px 30px ;
 }
@@ -49,35 +42,19 @@
   border-radius: 50%;
   border-radius: 50px;
 }
-
+iframe{
+  z-index:0;
+}
 .bootstrap-growl.alert.alert-success {
   background-color: rgba(10, 10, 10, 0.7);
   color: white;
 }
 
-.container-fluid.navbar-fixed-top {
-  top: 50px;
-}
-
-.panel.panel-primary {
-  border: none;
-  .panel-footer {
-    padding:0px;
-    button {
-      width: 100%;
-    }
-    textarea {
-      bottom: 0;
-      width: 100%;
-      resize: none;
-    }
-  }
-}
 
 .chat {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+  margin: 0 10px;
+  padding-bottom: 70px;
+
   li {
     margin-bottom: 10px;
     padding-bottom: 5px;
@@ -117,13 +94,6 @@
   margin-right: 5px;
 }
 
-.panel-body {
-  overflow-y: scroll;
-//  height: 100%
-padding: 0px;
-  margin: 0px;
-  background-color: #eee;
-}
 
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
