--- a/app/views/message/_dialog.html.haml
+++ b/app/views/message/_dialog.html.haml
@@ -1,54 +1,54 @@
-%nav.navbar-inverse.navbar-fixed-top{:role=>"navigation"}
-  .collapse.navbar-collapse.navbar-ex1-collapse
-    %input.form-control#search{:placeholder=>"Search..."}
-
-.col-md-8
+-#-#%nav.navbar-inverse.navbar-fixed-top{:role=>"navigation"}
+-#-#  .collapse.navbar-collapse.navbar-ex1-collapse
+-#-#    %input.form-control#search{:placeholder=>"Search..."}
+.content
+  .alert.alert-success.top-alert
+    Welcome! Send this link to coworkers who need accounts:
   .pag
     .glyphicon.glyphicon-chevron-up
-  .panel.panel-primary
-    .panel-body
-      %ul.chat
-        #messages-wrapper
-          - if @messages
-            -@messages.each do |message|
-              -if message.user_id==current_user.id
-                %li.from.clearfix
-                  %span.chat-img.pull-left
-                    =image_tag avatar_url(message.user,50),:class => "avatar"
-                  .chat-body.clearfix
-                    .header
-                      %strong.primary-font
-                        =link_to message.user.login, user_path(message.user.id)
-                      %small.pull-right.text-muted
-                        %span.glyphicon.glyphicon-time
-                        =message.created_at.strftime("%a %T")
-                    %p= message.body
-              -else
-                %li.to.clearfix
-                  %span.chat-img.pull-left
-                    =image_tag avatar_url(message.user,50),:class => "avatar"
-                  .chat-body.clearfix
-                    .header
-                      %strong.primary-font
-                        =link_to message.user.login, user_path(message.user.id)
-                      %small.pull-right.text-muted
-                        %span.glyphicon.glyphicon-time
-                        =message.created_at.strftime("%a %T")
-                    %p=message.body
-    .btn-group.dropup
-      %button.show_smile.btn.btn-default.dropdown-toggle{"data-toggle" => "dropdown", type: "button"}
-        %span.caret
-      %ul#dropdown-list.dropdown-menu{role: "menu"}
-        = render 'layouts/index'
-    .panel-footer
-
-      .typing
-        %br
-
-
-      %textarea.form-control#message
-      %button.btn.btn-success#send_message
-        Send message
-%audio#new-message
-  %source{:src=>"../sounds/button_tiny.ogg", :type=>"audio/ogg"}
-  %source{:src=>"../sounds/button_tiny.mp3", :type=>"audio/mp3"}
+  .chat#messages-wrapper
+    -##messages-wrapper
+    - if @messages
+      -@messages.each do |message|
+        -if message.user_id==current_user.id
+          %li.from.clearfix
+            %span.chat-img.pull-left
+              =image_tag avatar_url(message.user,50),:class => "avatar"
+            .chat-body.clearfix
+              .header
+                %strong.primary-font
+                  =link_to message.user.login, user_path(message.user.id)
+                %small.pull-right.text-muted
+                  %span.glyphicon.glyphicon-time
+                  =message.created_at.strftime("%a %T")
+              %p= message.body
+        -else
+          %li.to.clearfix
+            %span.chat-img.pull-left
+              =image_tag avatar_url(message.user,50),:class => "avatar"
+            .chat-body.clearfix
+              .header
+                %strong.primary-font
+                  =link_to message.user.login, user_path(message.user.id)
+                %small.pull-right.text-muted
+                  %span.glyphicon.glyphicon-time
+                  =message.created_at.strftime("%a %T")
+              %p=message.body
+  .input
+    %form{:action => "", :method => "get", :name => "messageForm"}
+      %table{:cellspacing => "0", :width => "100%"}
+        %tbody
+          %tr
+            %td
+              .textwrapper
+                %textarea#message_input{:autocomplete => "off"}
+            %td.up-pl-wrap{:width => "10%"}
+              %span.glyphicon.glyphicon-ok.ok
+              %label.upload-place
+                %input#upload-file{:type => "file"}
+            %td{:width => "1%"}
+              %label.upload-but{:for => "upload-file"}
+                %span.glyphicon.glyphicon-paperclip
+            %td{:width => "1%"}
+              %button.form-but#send_message{:type => "button"}
+                %span.glyphicon.glyphicon-thumbs-up
