--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -1,5 +1,4 @@
-.col-md-2
-  = render 'layouts/rooms_list'
+= render 'layouts/rooms_list'
+
 = render 'message/dialog'
-.col-md-2
-  = render 'layouts/friends_in_rooms'
+-#= render 'layouts/friends_in_rooms'
